src-ken&y/objects/Asset_Class_Rule__c.object
<CustomObject>
    <customHelpPage>HelpAssetClass</customHelpPage>
    <description>Stores information regarding the Asset Class for each Tax Book and period in time.</description>
    <fields>
        <fullName>Accumulated_Depreciation_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accumulated Depreciation GL Account</label>
        <lookupFilter>
           <active>true</active>
             <errorMessage>GL Account must be active</errorMessage>
             <filterItems>
                 <field>GL_Account__c.Active__c</field>
                 <operation>equals</operation>
                 <value>True</value>
             </filterItems>
             <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Asset Class Rules (Accumulated Depreciation GL Account)</relationshipLabel>
        <relationshipName>Accumulated_Asset_Class_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Asset Class.</description>
        <inlineHelpText>A group of fixed assets categorized according to business purpose. For example, Manufacturing equipment.</inlineHelpText>
        <label>Asset Class</label>
        <referenceTo>Asset_Class__c</referenceTo>
        <relationshipLabel>Asset Class Rules</relationshipLabel>
        <relationshipName>Asset_Class_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Asset Class Rules</relationshipLabel>
        <relationshipName>Asset_Class_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Declining_Balance__c</fullName>
        <label>Declining Balance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>200%</fullName>
                </value>
                <value>
                    <fullName>150%</fullName>
                </value>
                <value>
                    <fullName>Straight Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depreciation_Convention__c</fullName>
        <label>Depreciation Convention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mid Month</fullName>
                </value>
                <value>
                    <fullName>Full Month</fullName>
                </value>
                <value>
                    <fullName>Mid Quarter</fullName>
                </value>
                <value>
                    <fullName>Full Quarter</fullName>
                </value>
                <value>
                    <fullName>Half Year</fullName>
                </value>
                <value>
                    <fullName>Full Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depreciation_Method__c</fullName>
        <label>Depreciation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Line</fullName>
                </value>
                <value>
                    <fullName>Declining Balance</fullName>
                </value>
                <value>
                    <fullName>Sum of Years</fullName>
                </value>
                <value>
                    <fullName>MACRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depreciation_Period__c</fullName>
        <label>Depreciation Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disposition_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The account used to record the gain/loss on the asset when sold or retired.</inlineHelpText>
        <label>Disposition GL Account</label>
        <lookupFilter>
             <active>true</active>
             <errorMessage>GL Account must be active</errorMessage>
             <filterItems>
                 <field>GL_Account__c.Active__c</field>
                 <operation>equals</operation>
                 <value>True</value>
             </filterItems>
             <isOptional>false</isOptional>
         </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Asset Class Rules (Disposition GL Account)</relationshipLabel>
        <relationshipName>Disposition_Asset_Class_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The expense GL account is debited after each depreciation cycle.</inlineHelpText>
        <label>Expense GL Account</label>
        <lookupFilter>
             <active>true</active>
             <errorMessage>GL Account must be active</errorMessage>
             <filterItems>
                 <field>GL_Account__c.Active__c</field>
                 <operation>equals</operation>
                 <value>True</value>
             </filterItems>
             <isOptional>false</isOptional>
         </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Asset Class Rules (Expense GL Account)</relationshipLabel>
        <relationshipName>Expense_Asset_Class_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The full acquisition cost is debited from this account.</inlineHelpText>
        <label>Fixed Asset GL Account</label>
        <lookupFilter>
             <active>true</active>
             <errorMessage>GL Account must be active</errorMessage>
             <filterItems>
                 <field>GL_Account__c.Active__c</field>
                 <operation>equals</operation>
                 <value>True</value>
             </filterItems>
             <isOptional>false</isOptional>
         </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Asset Class Rules (Fixed Asset GL Account)</relationshipLabel>
        <relationshipName>Asset_Class_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Life_in_Months__c</fullName>
        <description>The default life in months for assets related to this Asset Class.</description>
        <inlineHelpText>The default value for assets assigned to this class. You can change the number for a specific asset.</inlineHelpText>
        <label>Life in Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>As tax laws change, you will need to create new asset class rules. The start and end dates provide you with a way to define the eligibility for a given rule.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Book__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Book</description>
        <inlineHelpText>The corporate book is used to depreciate your fixed assets. In addition to the corporate book, you can set up any number of tax book for each state in which you pay tax.</inlineHelpText>
        <label>Book</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Company__c</field>
                <operation>equals</operation>
                <valueField>Tax_Book__c.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tax_Book__c</referenceTo>
        <relationshipLabel>Asset Class Rules</relationshipLabel>
        <relationshipName>Asset_Class_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Asset Class Rule</label>
    <nameField>
        <label>Asset Class Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Class Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>The_Asset_class_rule_company_must_match</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNULL(Asset_Class__c) = FALSE &amp;&amp; Asset_Class__r.Company__c != Company__c, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>The Asset class rule company must match the asset class company.</errorMessage>
    </validationRules>
</CustomObject>